# giraffedev-site

./: .gitignore  Makefile  README.md  contact.md  flake.nix  giraffedev-site.cabal  index.html  index.js  site.hs  utils.js
css/: default.css
docs/: CNAME  index.html
docs/archive/: index.html
docs/contact/: index.html
docs/css/: default.css
docs/hello-world/: index.html
posts/: 2022-08-16-hello-world.js  2022-08-16-hello-world.md
templates/: archive.html  archive.js  contact.js  default.html  default.js  home.js  post.html  post.js
