name:               giraffedev-site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.15.*
                  , time-locale-compat == 0.1.*
                  , time == 1.9.*
                  , filepath == 1.4.*
                  , regex-tdfa == 1.3.*
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
